cluster-resources/ingress/cluster-ingress.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: cluster
spec:
  domain: apps.okd.baloise.dev
  appsDomain: apps.baloise.dev
  componentRoutes:
    - hostname: console.baloise.dev
      name: console
      namespace: openshift-console
