cluster-resources/ingress/console-custom-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console-custom
  namespace: openshift-console
  annotations:
    haproxy.router.openshift.io/backend-tls: "true"
  labels:
    app: console
spec:
  host: console.baloise.dev
  to:
    kind: Service
    name: console
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
